--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,12 +6,28 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="https://bootswatch.com/4/lumen/bootstrap.min.css" crossorigin="anonymous">
+  <link rel="stylesheet" href="/stylesheets/index.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+    integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="bg-light">
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+      <a class="navbar-brand" href="/">
+        <img src="../../logo/gouji.png" width="30" height="30" class="d-inline-block align-top" alt="">
+        老爹的私房錢
+      </a width="30" height="30">
+    </nav>
+  </header>
+
 
   {{{body}}}
 
+  <script src="/javascripts/popper.js"></script>
+  <script src="/javascripts/jquery-3.6.0.min.js"></script>
+  <script src="/javascripts/bootstrap.js"></script>
 </body>
 
 </html>
