--- a/index copy.handlebars
+++ b/index copy.handlebars
@@ -55,7 +55,7 @@
 
       {{!-- --}}
     </ul>
-    <div class="button-div2 mt-3">
+    <div class="button-div2 mb-5">
       <form action="" method="post">
         <button type="submit" class="btn btn-dark">新增支出</button>
       </form>
