--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,3 +1,7 @@
+body {
+  /* box-sizing: border-box; */
+  min-width: 380px;
+}
 .total-name {
   color: red;
   font-size: 20px;
@@ -11,7 +15,7 @@
   color: #5085ff;
 }
 .fa-utensils {
-  color: #dae47e;
+  color: #d4e63b;
 }
 .fa-grin-beam {
   color: #ffbed5;
@@ -22,9 +26,11 @@
 .fa-pen {
   color: #07342a;
 }
-/* .btn-major {
+.btn-major {
   background-color: #fd7e14;
   color: #ffffff;
+  width: 200px;
+  height: 50px;
 }
 
 .btn-major:hover {
@@ -34,4 +40,26 @@
 
 .border-major {
   border-color: #fd7e14 !important;
+}
+
+.form-control,
+.custom-select {
+  width: 450px;
+  margin-left: -15px;
+}
+
+.form-select {
+  border-radius: 5px;
+  height: 35px;
+  background-color: rgb(139, 170, 81);
+  color: white;
+  width: 180px;
+  margin-right: -10px;
+}
+
+/* #filter-category {
+  background-color: rgb(139, 170, 81);
+  color: white;
+  width: 180px;
+  margin-right: -10px;
 } */
