--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,4 +1,62 @@
 <div class="container mt-5">
-
-
+  <div class="row col-12 justify-content-center ">
+    <h2>輸入你的支出細項</h2>
+  </div>
+  <form action="/" method="POST">
+    <div class="row">
+      <div class="row col-12 justify-content-center ">
+        <div class="input-group">
+          <div class=" col-4 left mx-auto my-2 d-flex justify-content-end ">
+            <h5>名稱* :</h5>
+          </div>
+          <div class="input-group-append col-8 justify-content-start  ">
+            <input class="form-control" type="text" placeholder="午餐,晚餐" name="name" required>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="row col-12 justify-content-center ">
+        <div class="input-group">
+          <div class=" col-4 left my-2 mx-auto d-flex justify-content-end ">
+            <h5>日期* :</h5>
+          </div>
+          <div class="input-group-append col-8 justify-content-start">
+            <input class="form-control" type="date" placeholder="2021/03/31" name="date" required>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="row col-12 justify-content-between ">
+        <div class="input-group">
+          <div class=" col-4 left mx-auto my-2 d-flex justify-content-end ">
+            <h5>類別* :</h5>
+          </div>
+          <div class="input-group-append col-8 justify-content-start">
+            <select class="custom-select" name="category">
+              {{#each categoryBox}}
+              <option value="{{this.category}}">{{this.category}}</option>
+              {{/each}}
+            </select>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="row col-12  justify-content-between ">
+        <div class="input-group">
+          <div class=" col-4 left mx-auto my-2 d-flex justify-content-end ">
+            <h5>金額* :</h5>
+          </div>
+          <div class="input-group-append col-8 justify-content-start">
+            <input class="form-control" type="number" placeholder="100" name="amount" min="0" required>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row col-12 mx-auto justify-content-center ">
+      <button class="btn btn-warning btn-major" type="submit">新增支出</button>
+    </div>
+  </form>
 </div>
