--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -1,63 +1,62 @@
 <div class="container mt-5">
-  <div class="row">
-    <div class="row col-6 mx-auto justify-content-between">
-      <div class="col-4 left">
-        <h6>*請輸入欄位</h6>
-      </div>
-      <div class="col-8 right">
-        <h2>請輸入你的支出</h2>
+  <div class="row col-12 mx-auto justify-content-center ">
+    <h2>編寫本筆支出明細</h2>
+  </div>
+  <form action="/" method="POST">
+    <div class="row">
+      <div class="row col-12 justify-content-center ">
+        <div class="input-group">
+          <div class=" col-4 left mx-auto my-2 d-flex justify-content-end ">
+            <h5>名稱* :</h5>
+          </div>
+          <div class="input-group-append col-8 justify-content-start  ">
+            <input class="form-control" type="text" placeholder="午餐,晚餐" name="name" required>
+          </div>
+        </div>
       </div>
     </div>
-    <form action="/"></form>
-    {{!-- <form action="/todos" method="POST" style="display: inline;">
-      <div class="input-group">
-        <input class="form-control" type="text" placeholder="name" name="name">
-        <div class="input-group-append">
-          <button class="btn btn-success" type="submit">Create</button>
-        </div>
-      </div>
-
-      <div class="form-row ">
-        <div class="input-group col-6 mt-3">
-          <input class="form-control" type="text" placeholder="name" name="name-en">
-          <div class="input-group-append">
-            <button class="btn btn-success" type="submit">Create</button>
+    <div class="row">
+      <div class="row col-12 justify-content-center ">
+        <div class="input-group">
+          <div class=" col-4 left my-2 mx-auto d-flex justify-content-end ">
+            <h5>日期* :</h5>
           </div>
-        </div>
-        <div class="input-group col-6 mt-3">
-          <input class="form-control" type="text" placeholder="name" name="name1">
-          <div class="input-group-append">
-            <button class="btn btn-success" type="submit">Create</button>
+          <div class="input-group-append col-8 justify-content-start">
+            <input class="form-control" type="date" placeholder="2021/03/31" name="date" required>
           </div>
         </div>
       </div>
-
-      <div class="form-row">
-        <div class="col-4 mt-3">
-          <div class="input-group ">
-            <input class="form-control" type="text" placeholder="name" name="name2">
-            <div class="input-group-append">
-              <button class="btn btn-success" type="submit">Create</button>
-            </div>
+    </div>
+    <div class="row">
+      <div class="row col-12 justify-content-between ">
+        <div class="input-group">
+          <div class=" col-4 left mx-auto my-2 d-flex justify-content-end ">
+            <h5>類別* :</h5>
           </div>
-        </div>
-        <div class="col-4 mt-3">
-          <div class="input-group ">
-            <input class="form-control" type="text" placeholder="name" name="name3">
-            <div class="input-group-append">
-              <button class="btn btn-success" type="submit">Create</button>
-            </div>
-          </div>
-        </div>
-        <div class="col-4 mt-3">
-          <div class="input-group ">
-            <input class="form-control" type="text" placeholder="name" name="name4">
-            <div class="input-group-append">
-              <button class="btn btn-success" type="submit">Create</button>
-            </div>
+          <div class="input-group-append col-8 justify-content-start">
+            <select class="custom-select" name="category">
+              {{#each categoryBox}}
+              <option value="{{this.category}}">{{this.category}}</option>
+              {{/each}}
+            </select>
           </div>
         </div>
       </div>
-    </form> --}}
-  </div>
+    </div>
+    <div class="row">
+      <div class="row col-12  justify-content-between ">
+        <div class="input-group">
+          <div class=" col-4 left mx-auto my-2 d-flex justify-content-end ">
+            <h5>金額* :</h5>
+          </div>
+          <div class="input-group-append col-8 justify-content-start">
+            <input class="form-control" type="number" placeholder="100" name="amount" min="0" required>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row col-12 mx-auto my-3 justify-content-center ">
+      <button class="btn btn-warning btn-major" type="submit">新增支出</button>
+    </div>
+  </form>
 </div>
