--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,8 +1,8 @@
 <div class="container mt-5">
   <div class="row col-12 justify-content-center ">
-    <h2>輸入你的支出細項</h2>
+    <h2>修改支出明細</h2>
   </div>
-  <form action="/" method="POST">
+  <form action="/records/{{ record._id }}?_method=PUT" method="POST">
     <div class="row">
       <div class="row col-12 justify-content-center ">
         <div class="input-group">
@@ -10,19 +10,20 @@
             <h5>名稱* :</h5>
           </div>
           <div class="input-group-append col-8 justify-content-start  ">
-            <input class="form-control" type="text" placeholder="午餐,晚餐" name="name" required>
+            <input class="form-control" type="text" placeholder="午餐,晚餐" name="name" value="{{ record.name }}" required>
           </div>
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class=" row">
       <div class="row col-12 justify-content-center ">
         <div class="input-group">
           <div class=" col-4 left my-2 mx-auto d-flex justify-content-end ">
             <h5>日期* :</h5>
           </div>
           <div class="input-group-append col-8 justify-content-start">
-            <input class="form-control" type="date" placeholder="2021/03/31" name="date" required>
+            <input class="form-control" type="date" placeholder="2021/03/31" name="date" value="{{ record.date }}"
+              required>
           </div>
         </div>
       </div>
@@ -35,8 +36,10 @@
           </div>
           <div class="input-group-append col-8 justify-content-start">
             <select class="custom-select" name="category">
-              {{#each categoryBox}}
-              <option value="{{this.category}}">{{this.category}}</option>
+              {{#each categoryBox }}
+              <option value="{{ this.category }}" {{#ifEq this.category }} selected {{else}} {{/ifEq}}>{{
+                this.category
+                }}</option>
               {{/each}}
             </select>
           </div>
@@ -50,13 +53,15 @@
             <h5>金額* :</h5>
           </div>
           <div class="input-group-append col-8 justify-content-start">
-            <input class="form-control" type="number" placeholder="100" name="amount" min="0" required>
+            <input class="form-control" type="number" placeholder="100" name="amount" min="0"
+              value="{{ record.amount }}" required>
           </div>
         </div>
       </div>
     </div>
     <div class="row col-12 mx-auto justify-content-center ">
-      <button class="btn btn-warning btn-major" type="submit">新增支出</button>
+      <button type="submit" class="btn btn-info btn-send-out">送出</button>
+      <button type="button" class="btn btn-danger btn-return" id="btn-return"><a href="/">返回</a></button>
     </div>
   </form>
 </div>
