--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -1,6 +1,6 @@
 <div class="container mt-5">
   <div class="row col-12 mx-auto justify-content-center ">
-    <h2>編寫本筆支出明細</h2>
+    <h2>編寫支出明細</h2>
   </div>
   <form action="/" method="POST">
     <div class="row">
@@ -57,6 +57,7 @@
     </div>
     <div class="row col-12 mx-auto my-3 justify-content-center ">
       <button class="btn btn-warning btn-major" type="submit">新增支出</button>
+      <button class="btn btn-dark btn-reset" type="reset">重設</button>
     </div>
   </form>
 </div>
