--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -2,7 +2,7 @@
   <div class="row col-12 mx-auto justify-content-center ">
     <h2>編寫支出明細</h2>
   </div>
-  <form action="/" method="POST">
+  <form action="/records" method="POST">
     <div class="row">
       <div class="row col-12 justify-content-center ">
         <div class="input-group">
