--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,7 +10,7 @@
             <select name="category" class="form-select" onchange="submit()">
               <option selected>所有類別</option>
               {{#each categoryBox}}
-              <option value="{{ this.category}}" {{#ifEq this.category }}  selected {{else}} {{/ifEq}}>{{ this.category }}</option>
+              <option value="{{ this.category}}" {{#is this.category ../categoryQuery}}  selected {{/is}}>{{ this.category }}</option>
               {{/each}}
             </select>
         </div>
